--- a/src/estabelecimento.html
+++ b/src/estabelecimento.html
@@ -97,8 +97,8 @@
   <main>
 
     <div id="container-cidade"></div>
-    <div class="swiper-container" id = "locais-wrap">
-      <div class="swiper-wrapper locais-wrap"></div>
+    <div class="swiper-container" id = "EST-wrap">
+      <div class="swiper-wrapper EST-wrap"></div>
     </div>
     <form id="avaliacao" method="post" class="needs-validation" novalidate>
     <div class="depoimentos">
@@ -181,6 +181,9 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
   integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/14b399f147.js" crossorigin="anonymous"></script>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
 <script src="js/index.js"></script>
 <script src="Js/estabelecimento.js"></script>
 </html>
