Atualização da pagina de transporte
Atualização dos cards

--- a/src/transporte.html
+++ b/src/transporte.html
@@ -82,42 +82,16 @@
       </nav>
      </div>
 </header>
-<main>
-  <!-- Carrossel para cães -->
-  <h1>Cães:</h1>
-  <div class="carousel-container">
-      <button class="carousel-button carousel-button-dog prev">&lt;</button>
-      <div class="carousel">
-          <div class="carousel-inner" id="carousel-inner">
-              <!-- Os cards serão inseridos aqui dinamicamente -->
-          </div>
-      </div>
-      <button class="carousel-button carousel-button-dog next">&gt;</button>
-  </div>
+<main id="main-content">
 
-  <!-- Carrossel para gatos -->
-  <h1>Gatos:</h1>
-  <div class="carousel-container">
-      <button class="carousel-button carousel-button-cat prev">&lt;</button>
-      <div class="carousel">
-          <div class="carousel-inner" id="carousel-inner-cat">
-              <!-- Os cards serão inseridos aqui dinamicamente -->
-          </div>
-      </div>
-      <button class="carousel-button carousel-button-cat next">&gt;</button>
-  </div>
+  <section id="cards-container">
+    <!-- Aqui serão inseridos os cards dinamicamente -->
+</section>
+<section id="article-container" class="hidden">
+    <!-- Aqui será exibido o artigo -->
+    <button id="back-button">Voltar</button>
+</section>
 
-  <!-- Carrossel para pássaros -->
-  <h1>Pássaros:</h1>
-  <div class="carousel-container">
-      <button class="carousel-button carousel-button-bird prev">&lt;</button>
-      <div class="carousel">
-          <div class="carousel-inner" id="carousel-inner-bird">
-              <!-- Os cards serão inseridos aqui dinamicamente -->
-          </div>
-      </div>
-      <button class="carousel-button carousel-button-bird next">&gt;</button>
-  </div>
 </main>
     <footer class="section footer-classic context-dark bg-image" style="background-color: #0097b2">
       <div class="container">
