--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,7 @@
         <li>
           <a id="entre" href="entre.html">Entre</a>
         </li>
+        
       </ul>
     </div>
     <!--Cabeçalho-->
@@ -180,11 +181,27 @@
       <h3 class="mt-3 pb-3 mb-4 font-italic border-bottom">
         Depoimentos
       </h3>
+      <p>
+        Nosso objetivo com esse projeto é criar uma plataforma completa e acessível que ofereça informações úteis e dicas práticas para quem viaja com seu pet por Minas Gerais. Nosso compromisso é garantir que sua experiência seja não apenas conveniente, mas também segura e enriquecedora para você e seu animal de estimação. Queremos ser seu guia confiável, fornecendo orientações detalhadas desde a escolha de destinos pet-friendly até cuidados específicos durante a viagem. Acreditamos que cada momento compartilhado com seu pet deve ser desfrutado ao máximo, com a certeza de que estamos aqui para ajudar em cada passo da jornada.
+      </p>
     </div>
 
-    <div class="swiper-container" id = "locais-wrap">
-      <div class="swiper-wrapper locais-wrap"></div>
-    </div>
+      <div class="container">
+        <h3 class="mt-3 pb-3 mb-4 font-italic border-bottom">
+          Momentos que amamos
+        </h3>
+        <div class="love">
+          <div class="image-t">
+            <img src="imagens/home-home1.jpg" alt="Imagem 1">
+            <img src="imagens/home-home2.jpg" alt="Imagem 2">
+            <img src="imagens/home-home3.jpg" alt="Imagem 3">
+            <img src="imagens/home-home4.jpg" alt="Imagem 4">
+            <img src="imagens/home-home5.jpg" alt="Imagem 5">
+            <img src="imagens/home-home6.jpg" alt="Imagem 6">
+          </div>
+        </div>
+      </div>
+
 
 
   </main>
