--- a/src/index.html
+++ b/src/index.html
@@ -179,7 +179,7 @@
 
     <div class="container">
       <h3 class="mt-3 pb-3 mb-4 font-italic border-bottom">
-        Depoimentos
+        Amamos Viajar
       </h3>
       <p>
         Nosso objetivo com esse projeto é criar uma plataforma completa e acessível que ofereça informações úteis e dicas práticas para quem viaja com seu pet por Minas Gerais. Nosso compromisso é garantir que sua experiência seja não apenas conveniente, mas também segura e enriquecedora para você e seu animal de estimação. Queremos ser seu guia confiável, fornecendo orientações detalhadas desde a escolha de destinos pet-friendly até cuidados específicos durante a viagem. Acreditamos que cada momento compartilhado com seu pet deve ser desfrutado ao máximo, com a certeza de que estamos aqui para ajudar em cada passo da jornada.
